--- a/index.html
+++ b/index.html
@@ -167,6 +167,16 @@
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Contact</button>
           </li>
+          <li class="navbar-item">
+            <a download="shivam-gangwar-cv.pdf.pdf" href="assets/pdf/shivam-gangwar-cv.pdf.pdf" class="button button--flex">
+              Download CV <i class="uil uil-download-alt button__icon"></i>
+            </a>
+
+          </li>
+
+
+
+
 
         </ul>
 
@@ -782,6 +792,9 @@
 
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
+
+
 
 </body>
 
